k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hellonuno
  labels:
    app.kubernetes.io/name: hellonuno
    app.kubernetes.io/part-of: hellonuno
