k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellonuno-backend
  namespace: hellonuno
  labels:
    app: hellonuno-backend
    app.kubernetes.io/name: hellonuno-backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: hellonuno
spec:
  type: ClusterIP
  selector:
    app: hellonuno-backend
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
