k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellonuno-frontend
  namespace: hellonuno
  labels:
    app: hellonuno-frontend
    app.kubernetes.io/name: hellonuno-frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: hellonuno
spec:
  type: ClusterIP
  selector:
    app: hellonuno-frontend
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
